--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,15 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      uses: docker/login-action@v1
+      - uses: docker/login-action@v1
       with:
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}
       id: meta
-      uses: docker/metadata-action@v3
+      - uses: docker/metadata-action@v3
       with:
         images: rkt2u/python-helloworld
-      uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v2
       with:
         push: true
         tags: rkt2u/python-helloworld:latest
