--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,19 +4,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      -
+      - name: Check out the repo
         uses: actions/checkout@v2
-      -
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
-      -
+
+      - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v3
         with:
           images: rkt2u/python-helloworld
-      -
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           push: true
