--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile
+          platform: linux/amd64
           push: true
           tags: rkt2u/python-helloworld:latest
 
