--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platform: linux/amd64
+          platforms: linux/amd64
           push: true
           tags: rkt2u/python-helloworld:latest
 
